# ai-ppt-script-generator

./: Makefile  README.md  Script-from-ppt.ipynb  pyproject.toml  requirements.txt
script_from_ppt/: __init__.py  config.py  main.py  powerpoint_processor.py  prompts.py  script_generator.py
streamlit_app/: app.py
